--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3.3'
 services:
+    app:
+        image: outbound.docker.lamoda.ru/datamatrix-camunda
+        ports:
+            - 8080:8080
+        volumes:
+            - ./:/app
+        depends_on:
+            - postgres
+        command: sh -c "java -jar target/datamatrix-0.0.1-SNAPSHOT.jar"
     postgres:
         image: postgres:12-alpine
         ports:
