--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.org.springframework.web=DEBUG
-spring.datasource.url=jdbc:postgresql://192.168.99.133/datamatrix
+spring.datasource.url=jdbc:postgresql://postgres/datamatrix
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
